# TableSemantic

./: TableEmbedder.py  main.py  models.py  pyproject.toml  table_gen.py  test.ipynb
experiments/: Документ Microsoft Word.docx
