[project]
name = "tabledatabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "ollama>=0.5.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
]
